@@ -1,3 +1,9 @@
+2005-07-04  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Put the icon in the Track column for now, and force the icon
+	size (inspired by a patch from Luca Cavalli).
+
 2005-07-03 Madhan Raj M  <madhanrm@cvs.gnome.org>
 
 	* src/sj-extracting.c: (cleanup), (on_extract_activate)
